* BUG#8371 Check indemnifications scheduling by service when running indemnification creation batch due to check on previous periods feature
* FEA#8159 Add the configuration field "Block Indemnifications Scheduling" on claim sub status which allows blocking indemnifications scheduling on open claims
* OTH#0000 Iteration on 7982. Set default payment journal if possible on an indemnification
* BUG#8387 Add default value for active field on payback reason
* OTH#0000 Only do payback reason migration for cancelled indemnifications
* FEA#8166 Add a payback reason on claim indemnifications
* FEA#8225 Allow to set tax_date at indemnification start
* BUG#8241 The last paid indemnification date ignores deductible periods
* FEA#7982 Add payment journals on benefits for the indemnification periods creation
* FEA#8032 Add check which prevent scheduling if the previous period is missing
* FEA#7975 Add action on indemnification detail lines to delete the related indemnification
* OTH#0000 Hide invoice line in indemnification if empty following 7802
* BUG#7893 Add rule engine method to define wether an indemnification is manual or not.
* BUG#7891 Indemnification process fixes for some required fields
* FEA#7850 Enhance claim services display in indemnifications wizard
* BUG#7583 Various fixes on claim indemnification process
* FEA#7747 Add methods to the rule engine for indemnification calculation
* FEA#7802 Display indemnification invoice details
* BUG#7766 Filter services in indemnifications wizard
* BUG#7756 Add "Can be indemnificated" field on claim services
* BUG#7642 Error when creating a loss with an end_date inside a deductible period
* BUG#7621 Do not display indemnification beneficiary share warning if the delegation for the insurer doesn't contain calculate or pay indemnification

Version 1.14 - 2017-11-09
* BUG#7179 Claim invoices payment lines are now properly reconciled when beneficiaries had overdue
* OTH#0000 fix test scenario